* Author: Mike FABIAN <mfabian@redhat.com>
* 28 May 2018 Released 2.0.0 version
* Update translations because of the merge of the engines (de, pl, uk updated)
* Update emoji annotations from CLDR
* Do not hardcode icon names in desktop files (Resolves: https://github.com/mike-fabian/ibus-typing-booster/issues/17)
* Change the default for “Unicode symbols and emoji predictions” to “False”
* Merge all typing-booster engines into one
* Change the UI of the setup tool to make it possible to select multiple input methods and dictionaries
* Move the buttons to learn from a file and to delete learned data to the options tab
* Use the same “About” dialog in the setup tool as in emoji-picker

* Author: Mike FABIAN <mfabian@redhat.com>
* 22 May 2018 Released 1.5.38 version
* Refresh french translation (thanks to Thierry Thomas)
* Mark comments in the emoji-picker about dialog as translatable

* 14 May 2018 Released 1.5.37 version
* Update translations from Zanata (pl and uk updated)
* Make “Add direct input” option work correctly when “Remember last preedit input method” option is off
* Fix test case for Korean
* Rewrite setup UI completely in Python, without using Glade
* Fix format string in debug message when a dictionary .aff file has no encoding (Resolves: rhbz#1575659)
* Return False in read_training_data_from_file() if file cannot be opened

* Author: Mike FABIAN <mfabian@redhat.com>
* 10 Apr 2018 Released 1.5.36 version
* Make the default for self.show_status_info_in_auxiliary_text False (Resolves: rhbz#1564354)
* Adapt hunspell_suggest.py to work with pyhunspell 0.5.4

* Author: Mike FABIAN <mfabian@redhat.com>
* 07 Mar 2018 Released 1.5.35 version
* Update translations from zanata (es, pl and uk updated)
* Update UnicodeData.txt to UnicodeData-11.0.0d13.txt
* Read also the emoji names from the emoji-test.txt file
* Update Unicode emoji data to a prerelease of Unicode Emoji Data 11.0